start work on modularised build