@@ -15,8 +15,8 @@ apply plugin: 'com.dua3.gradle.jpms'
 // Show the version of Java
 println("Java version: "+JavaVersion.current());
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 9
+targetCompatibility = 9
 
 compileJava {
     options.encoding = 'UTF-8'
@@ -33,8 +33,8 @@ dependencies {
     compile group: 'com.dua3.utility', name: 'utility', version: '0.11.3'
 
     // Log4j2
-    compile     group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.11.0'
-    compile     group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
+    compile     group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
+    compile     group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'
 
     // FontAwesomeFX - icon collection [FontAweSomeFX: ASL 2.0, FontAweSome: SIL OFL 1.1 / Creative Commons]
     compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2-jdk8-1'
@@ -53,4 +53,22 @@ sourceSets {
         includes = []
     }
   }
+}
+
+// TODO remove once all dependencies are modularized
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'ALL-SYSTEM',
+            '-d', sourceSets.main.output.classesDirs.asPath
+        ]
+    }
+}
+
+jlink {
+	module = 'com.dua3.fxbrowser'
+	main = 'com.dua3.fxbrowser.FxBrowser'
+	application = 'fxbrowser'
+	compress = 2
 }
